--- a/G. Hearns, M. R. Katebi and M. J. Grimble. Robust control of a hot strip mill looper.tex
+++ b/G. Hearns, M. R. Katebi and M. J. Grimble. Robust control of a hot strip mill looper.tex
@@ -57,7 +57,7 @@
 
 % Contenido
 \begin{multicols}{2}
-	\input{example} % Ejemplo, se puede borrar
+	\input{src/etc/cnv_2023_02_03_a0e6f9ef575b6be1661bg} % Ejemplo, se puede borrar
 \end{multicols}
 
 % FIN DEL DOCUMENTO
