--- a/example.tex
+++ b/example.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = es_MX-SpanishMexico
 % Template:     Artículo LaTeX
 % Documento:    Archivo de ejemplo
 % Versión:      1.1.6 (12/06/2022)
